--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body ng-app="CalendarApp">
     <div class="header">
       <div class="container">
-        <img src= "img/logo.svg" width="51" height="54">
+        <img src= "img/logo.png" width="51" height="54">
       </div>
     </div>
 
